2005-07-07 Andrew Ruder <aeruder@ksu.edu>
 * GNUstepOutput: Moved to using distributed notifications instead of 
 distributed objects.
 * GNUstepOutput: Fix autoresize of nickview
 * GNUstepOutput: Fix tab completion picking up noncommand commandTyping:

2005-06-27 Andrew Ruder <aeruder@ksu.edu>
 * GNUstepOutput: The NSTextField was much too much of a pain to use anymore.
 I've replaced the typing view full out with a KeyTextView which I think will
 also allow OS X to work sanely.

2005-06-26 Andrew Ruder <aeruder@ksu.edu>
 * GNUstepOutput: On OS X focusing a textfield causes the action to be sent.
 This was causing the messages to be sent everytime the window was made key.
 Instead I am now trapping the key in the field editor so that it works 
 correctly on OS X and GNUstep.

2005-06-25 Andrew Ruder <aeruder@ksu.edu>
 * GNUstepOutput: Fixed serverlist focusing issues.  When you remove a server
 it won't always scroll to the top.

 * GNUstepOutput: Added 5 .nibs (special thanks to Aaron Glenn for doing this
 over IRC ;)

2005-06-24 Andrew Ruder <aeruder@ksu.edu>
 * GNUstepOutput: There was a bug in the sorting code for the userlist.
 
 The place for typing will now retain it's position when tabs are changed/
 windows are taken from being key.

2005-06-22 Andrew Ruder <aeruder@ksu.edu>
 * IRCSwarm: Updating to allow time constraints (to adjust time between
 events) and correct case on nicknames.

 * GNUstepOutput: Using bold font correctly.  (It was only appropriately
 applied when the preferences were updated.)

 Removed caching (over complicated logic) from NSAttributedString.

 Several bug fixes in TabMasterController.m along the way to reenabling
 the select previous/next tab/close tab buttons on the menu. (which now
 work)

 * TalkSoup.app: I am a fricking retard.  I had doubleReleaseCheck on.
 Yes.  That is why it was slow.  I... am... a... retard.
 
 Retard
 Retard
 Retard

 TalkSoup is fast again.

2005-06-20 Andrew Ruder <aeruder@ksu.edu>