@@ -1,3 +1,8 @@
+2005-07-12 Andrew Ruder <aeruder@ksu.edu>
+ * GNUstepOutput
+   NetclassesInput: Made changes to allow default quit message to work
+   when quitting the app, closing a window, and /quit.
+
 2005-07-07 Andrew Ruder <aeruder@ksu.edu>
  * GNUstepOutput: Moved to using distributed notifications instead of 
  distributed objects.
